log_output_ping_pong/manifests/log_output_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logoutput-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: logoutput
  template:
    metadata:
      labels:
        app: logoutput
    spec:
      volumes:
        - name: shared-files
          persistentVolumeClaim:
            claimName: log-pong-pvc
      containers:
        - name: log-output-reader
          image: log-output-reader:1.01
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: shared-files
              mountPath: /usr/src/app/files

        - name: log-output-writer
          image: log-output-writer:1.01
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: shared-files
              mountPath: /usr/src/app/files
