log_output_ping_pong/manifests/ping_pong_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pingpong-dep
  namespace: exercises
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pingpong
  template:
    metadata:
      labels:
        app: pingpong
    spec:
      containers:
        - name: pingpong
          image: ping-pong:1.00
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8001
