log_output_ping_pong/manifests/ping_pong_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pingpong-svc
  namespace: exercises
spec:
  selector:
    app: pingpong
  type: ClusterIP
  ports:
    - port: 1234
      protocol: TCP
      targetPort: 8001
